Fix optical vertical alignment on navbar-brand

--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -8,4 +8,5 @@
 .navbar-brand {
   @extend loose-caps;
   @extend .font-family-accent;
+  margin-bottom: -0.15em;
 }
